# inode-based-filesystem

./: CMakeLists.txt  README.md  build.sh  test_fuse.sh
include/: bitmap.h  block.h  common.h  const.h  inode.h  mytest.h  super_block.h
src/: CMakeLists.txt  bitmap.cpp  block.cpp  common.cpp  inode.cpp  inode_fuse.cpp  mytest.cpp  super_block.cpp
test/: CMakeLists.txt  bitmap_test.cpp  inode_test.cpp  mytest_test.cpp  super_block_test.cpp
